@@ -17,42 +17,6 @@
     </introduction>
     <subsection xml:id="subsection-OD-TM" acro="TM">
         <title>Triangular Matrices</title>
-        <p>Obviously, properties of a lower triangular matrices will have analogues for upper triangular matrices.  Rather than stating two very similar theorems, we will say that matrices are <q>triangular of the same type</q> as a convenient shorthand to cover both possibilities and then give a proof for just one type.</p>
-        <theorem xml:id="theorem-PTMT" acro="PTMT">
-            <title>Product of Triangular Matrices is Triangular</title>
-            <idx>product of triangular matrices</idx>
-            <statement>
-                <p>Suppose that <m>A</m> and <m>B</m> are square matrices of size <m>n</m> that are triangular of the same type.  Then <m>AB</m> is also triangular of that type.</p>
-            </statement>
-            <proof>
-                <p>We prove this for lower triangular matrices and leave the proof for upper triangular matrices to you.  Suppose that <m>A</m> and <m>B</m> are both lower triangular.  We need only establish that certain entries of the product <m>AB</m> are zero.  Suppose that <m>i\lt j</m>, then<md>
-                    <mrow>\matrixentry{AB}{ij}
-                    &amp;=
-                    \sum_{k=1}^{n}\matrixentry{A}{ik}\matrixentry{B}{kj}&amp;&amp;
-                        <xref ref="theorem-EMP" acro="EMP"/></mrow>
-                    <mrow>&amp;=
-                    \sum_{k=1}^{j-1}\matrixentry{A}{ik}\matrixentry{B}{kj}
-                    +
-                    \sum_{k=j}^{n}\matrixentry{A}{ik}\matrixentry{B}{kj}&amp;&amp;
-                        <xref ref="property-AACN" acro="AACN"/></mrow>
-                    <mrow>&amp;=
-                    \sum_{k=1}^{j-1}\matrixentry{A}{ik}0
-                    +
-                    \sum_{k=j}^{n}\matrixentry{A}{ik}\matrixentry{B}{kj}&amp;&amp;
-                        k\lt j\text{, }<xref ref="definition-LTM" acro="LTM"/></mrow>
-                    <mrow>&amp;=
-                    \sum_{k=1}^{j-1}\matrixentry{A}{ik}0
-                    +
-                    \sum_{k=j}^{n}0\matrixentry{B}{kj}&amp;&amp;
-                        i\lt j\leq k\text{, }<xref ref="definition-LTM" acro="LTM"/></mrow>
-                    <mrow>&amp;=
-                    \sum_{k=1}^{j-1}0+\sum_{k=j}^{n}0</mrow>
-                    <mrow>&amp;=
-                    0</mrow>
-                </md>.</p>
-                <p>Since <m>\matrixentry{AB}{ij}=0</m> whenever <m>i\lt j</m>, by <xref ref="definition-LTM" acro="LTM"/>, <m>AB</m> is lower triangular.</p>
-            </proof>
-        </theorem>
         <p>The inverse of a triangular matrix is triangular, of the same type.</p>
         <theorem xml:id="theorem-ITMT" acro="ITMT">
             <title>Inverse of a Triangular Matrix is Triangular</title>
