@@ -34,7 +34,8 @@ algebraic multiplicities.
 Definitions UTM and LTM move from Section OD to Section MO,
 with new Example ULTM.  Theorem NTM new in Section MO,
 describes nonsingular triangular matrices, with Example NSTM
-to illustrate.
+to illustrate.  Move Theorem PTMT about the product of
+triangular matrices moves from Section OD to Section MM.
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -84,6 +85,7 @@ Change: Re-title Example CAEHW to Example CASE
 Change: Theorem EMRCP, shorter proof with new Theorem ESM
 Change: Locate Theorem MNEM earlier, with new proof
 Change: Locate Definition UTM and Definition LTM earlier
+Change: Locate Theorem PTMT in Section MM
 Sage: doctesting, version 9.2
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
